# KataGoCoreML

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: cmake_uninstall.cmake.in
include/: CoremltoolsDefines.hpp  ModelBuilder.hpp  ModelDescription.hpp  ModelVersion.hpp  UtilTempDir.hpp
include/katagocoreml/: ModelBuilder.hpp
scripts/: build_coremltools.sh
src/: ModelBuilder.cpp  ModelDescription.cpp
test/: test_main.cpp
